RJ-2025-039 author corrections

--- a/_articles/RJ-2025-039/RJ-2025-039.Rmd
+++ b/_articles/RJ-2025-039/RJ-2025-039.Rmd
@@ -1,13 +1,13 @@
 ---
 title: 'simlandr: Simulation-Based Landscape Construction for Dynamical Systems'
-date: '2026-02-04'
+date: '2026-02-13'
 abstract: |
-  We present the simlandr package for R, which provides a set of tools for constructing potential landscapes for dynamical systems using Monte Carlo simulation. Potential landscapes can be used to quantify the stability of system states. While the canonical form of a potential function is defined for gradient systems, generalized potential functions can also be defined for non-gradient dynamical systems. Our method is based on the potential landscape definition from the steady-state distribution, and can be used for a large variety of models. To facilitate simulation and computation, we introduce several novel features, including data structures optimized for batch simulations under varying conditions, an out-of-memory computation tool with integrated hash-based file-saving systems, and an algorithm for efficiently searching the minimum energy path. Using a multistable cell differentiation model as examples, we illustrate how simlandr can be used for model simulation, landscape construction, and barrier height calculation. The simlandr package is available at https://CRAN.R-project.org/package=simlandr, under GPL-3 license.
+  We present the simlandr package for R, which provides a set of tools for constructing potential landscapes for dynamical systems using Monte Carlo simulation. Potential landscapes can be used to quantify the stability of system states. While the canonical form of a potential function is defined for gradient systems, generalized potential functions can also be defined for non-gradient dynamical systems. Our method is based on the potential landscape definition from the steady-state distribution, and can be used for a large variety of models. To facilitate simulation and computation, we introduce several novel features, including data structures optimized for batch simulations under varying conditions, an out-of-memory computation tool with integrated hash-based file-saving systems, and an algorithm for efficiently searching the minimum energy path. Using a multistable cell differentiation model as an example, we illustrate how simlandr can be used for model simulation, landscape construction, and barrier height calculation. The simlandr package is available at https://CRAN.R-project.org/package=simlandr, under GPL-3 license.
 draft: no
 author:
 - name: Jingmeng Cui
   affiliation:
-  - University of Groningen
+  - University of Groningen,
   - Radboud University
   address:
   - Faculty of Behavioural and Social Sciences, Groningen, the Netherlands
@@ -16,7 +16,7 @@ author:
   orcid: 0000-0003-3421-8457
 - name: Merlijn Olthof
   affiliation:
-  - University of Groningen
+  - University of Groningen,
   - Radboud University
   address:
   - Faculty of Behavioural and Social Sciences, Groningen, the Netherlands
@@ -25,7 +25,7 @@ author:
   orcid: 0000-0002-5975-6588
 - name: Anna Lichtwarck-Aschoff
   affiliation:
-  - University of Groningen
+  - University of Groningen,
   - Radboud University
   address:
   - Faculty of Behavioural and Social Sciences, Groningen, the Netherlands
@@ -78,34 +78,34 @@ knitr::include_graphics("figures/metaphor.png")
 
 Yet, formally quantifying the stability of states is a nontrivial question. Here we present an R package, \CRANpkg{simlandr}, that can quantify the stability of various kinds of systems without many mathematical restrictions.
 
-Dynamical systems are usually modeled by stochastic differential equations, which may depend on the past history (i.e., may be non-Markovian, @StumpfEtAlModelingStemCell2021). They take the general form of 
+Dynamical systems are usually modeled by stochastic differential equations, which may depend on the past history (i.e., may be non-Markovian, @StumpfEtAlModelingStemCell2021). They take the general form of
 \begin{equation}
 \mathrm{d} \boldsymbol{X}_t = \boldsymbol{b}(\boldsymbol{X}_t, \boldsymbol{H}_t){\mathrm{d}t} + \boldsymbol{\sigma}( \boldsymbol{X}_t, \boldsymbol{H}_t)\mathrm{d}\boldsymbol{W},
 (\#eq:sde)
-\end{equation} 
+\end{equation}
 where $\boldsymbol{X}_t$ is the random variable representing the current state of the system and $\boldsymbol{H_t}$ represents the past history of the system $\boldsymbol{H}_t=\{\boldsymbol{X_s} | s \in [0, t)\}$\footnote{The corresponding variable representing positions in the state space is not a random variable, so we use lowercase \(\boldsymbol{x}\) for it. This convention will be followed throughout this article.} The first term on the right-hand side of Eq \@ref(eq:sde) represents the deterministic part of the dynamics, which is a function of the system's current state $\boldsymbol{b}(\boldsymbol{X}_t, \boldsymbol{H}_t)$. The second term represents the stochastic part, which is standard white noise $\mathrm{d}\boldsymbol{W}$ multiplied by the noise strength $\boldsymbol{\sigma}( \boldsymbol{X}_t, \boldsymbol{H}_t)$.
 
-If the dynamical equation (Eq \@ref(eq:sde)) can be written in the following form 
-\begin{equation} 
-\mathrm{d} \boldsymbol{X} = - \nabla U {\mathrm{d} t} +\sqrt{2}\mathrm{d}\boldsymbol{W}, 
+If the dynamical equation (Eq \@ref(eq:sde)) can be written in the following form
+\begin{equation}
+\mathrm{d} \boldsymbol{X} = - \nabla U {\mathrm{d} t} +\sqrt{2}\mathrm{d}\boldsymbol{W},
 (\#eq:canon)
-\end{equation} 
-then $U$ is the potential function of the system.\footnote{Under zero inertia approximation.}. However, this is not possible for general dynamical systems. The trajectory of such a system may contain loops which are not possible to be represented by a gradient system (this issue was compared to Escher's stairs by @rodriguez-sanchezClimbingEscherStairs2020). In this case, further generalization is needed. The theoretical background of \CRANpkg{simlandr} is the generalized potential landscape by @wangPotentialLandscapeFlux2008, which is based on the Boltzmann distribution and the steady-state distribution of the system. The Boltzmann distribution is a distribution law in physics, which states the distribution of classical particles depends on the energy level they occupy. When the energy is higher, the particle is exponentially less likely to be in such states 
-\begin{equation} 
+\end{equation}
+then $U$ is the potential function of the system.\footnote{Under zero inertia approximation.} However, this is not possible for general dynamical systems. The trajectory of such a system may contain loops which are not possible to be represented by a gradient system (this issue was compared to Escher's stairs by @rodriguez-sanchezClimbingEscherStairs2020). In this case, further generalization is needed. The theoretical background of \CRANpkg{simlandr} is the generalized potential landscape by @wangPotentialLandscapeFlux2008, which is based on the Boltzmann distribution and the steady-state distribution of the system. The Boltzmann distribution is a distribution law in physics, which states the distribution of classical particles depends on the energy level they occupy. When the energy is higher, the particle is exponentially less likely to be in such states
+\begin{equation}
 P(\boldsymbol{x}) \propto \exp (-U).
 (\#eq:Boltzmann)
 \end{equation}
 
-This is then linked to dynamical systems by the steady-state distribution. The steady-state distribution of stochastic differential equations is the distribution that does not change over time, denoted by $P_{\mathrm{SS}}$ which satisfies 
-\begin{equation} 
+This is then linked to dynamical systems by the steady-state distribution. The steady-state distribution of stochastic differential equations is the distribution that does not change over time, denoted by $P_{\mathrm{SS}}$ which satisfies
+\begin{equation}
 \frac{\partial P_{\mathrm{SS}} (\boldsymbol{x},t)}{\partial t} = 0.
 (\#eq:ss)
-\end{equation} 
-The steady-state distribution is important because it extracts time-invariant information from a set of stochastic differential equations. Substituting the steady-state distribution to Eq \@ref(eq:Boltzmann) gives Wang's generalized potential landscape function [@wangPotentialLandscapeFlux2008] 
+\end{equation}
+The steady-state distribution is important because it extracts time-invariant information from a set of stochastic differential equations. Substituting the steady-state distribution into Eq \@ref(eq:Boltzmann) gives Wang's generalized potential landscape function [@wangPotentialLandscapeFlux2008]
 \begin{equation}
 U(\boldsymbol{x}) = - \ln P_{\mathrm{SS}}(\boldsymbol{x}).
 (\#eq:Wang)
-\end{equation} 
+\end{equation}
 If the system has ergodicity (i.e., after sufficient time it can travel to all possible states in the state space), the long-term sample distribution can be used to estimate the steady-state distribution, and the generalized potential function can be calculated.
 
 Our approach is not the only possible way for constructing potential landscapes. Many other theoretical approaches are available, including the SDE decomposition method by @AoPotentialStochasticDifferential2004 and the quasi-potential by @FreidlinWentzellRandomPerturbationsDynamical2012. Various strategies to numerically compute these landscapes have been proposed (see @zhouConstructionLandscapeMultistable2016 for a review). However, available realizations are still scarce. To our knowledge, besides \CRANpkg{simlandr}, there are two existing packages specifically for computing potential landscapes: the \CRANpkg{waydown} package [@rodriguez-sanchezPabRodRolldownPostpublication2020] and the \pkg{QPot} package [@MooreEtAlQPotPackageStochastic2016; @dahiyaOrderedLineIntegral2018]. The \CRANpkg{waydown} package uses the skew-symmetric decomposition of the Jacobian, which theoretically produces landscapes that are similar to @wangPotentialLandscapeFlux2008 (but see @CuiEtAlCommentsClimbingEscher2023 for a potential technical issue with this package.). The \pkg{QPot} package uses a path integral method that produces quasi-landscapes following the definition by @FreidlinWentzellRandomPerturbationsDynamical2012. Because of the analytical methods used by \CRANpkg{waydown} and \pkg{QPot}, they both require the dynamic function to be Markovian and differentiable in the whole state space. Moreover, they can only be used for systems of up to two dimensions. \CRANpkg{simlandr}, in contrast, is based on Monte Carlo simulation and the steady-state distribution. It does not have specific requirements for the model. Even for models that are not globally differentiable, have history-dependence, and are defined in a high-dimensional space, \CRANpkg{simlandr} is still applicable (e.g., @CuiEtAlMetaphorComputationConstructing2021). Therefore, \CRANpkg{simlandr} can be applied to a much wider range of dynamical systems, illustrate a big picture of dominated attractors, and investigate how the stability of different attractors may be influenced by model parameters. As a trade-off, \CRANpkg{simlandr} is not designed for rare events sampling in which the noise strength $\boldsymbol{\sigma}(\boldsymbol{X})$ is extremely small, nor for the precise calculation of the tail probability and transition paths. Instead, it is better to view \CRANpkg{simlandr} as a semi-quantitative tool that provides a broad overview of key attractors in dynamic systems, allowing for comparisons of their relative stability and the investigation of system parameter influences. We will show some typical use cases of \CRANpkg{simlandr} in later sections. Some key terms used in this article are summarized in Table \@ref(tab:terms).
@@ -160,9 +160,9 @@ An important property of the states in a landscape is their stability, which can
 
 In 2D cases, there is only one possible path connecting two local minima. The point on the path with the highest $U$ is identified as the saddle point. For 3D landscapes, there are multiple paths between two local minima. If we treat the system *as if* it is a gradient system with Brownian noise, then the most probable path (termed as the *minimum energy path*, MEP) that the system transitions is that it first goes along the steepest *ascent* path from the starting point, and then goes along the steepest *descent* path to the end point [@EVanden-EijndenTransitionpathTheoryPathfinding2010]. We find this path by minimizing the following action using the @dijkstra1959note algorithm [@HeymannVanden-EijndenPathwaysMaximumLikelihood2008]
 \begin{equation}
-\varphi_{\mathrm{MEP}} = \arg\min_\varphi \int_A^B |\nabla U||\mathrm{d}\varphi|\left( \approx \min_\varphi \Sigma_i |\nabla U_i||\Delta \varphi_i|\right), 
+\varphi_{\mathrm{MEP}} = \arg\min_\varphi \int_A^B |\nabla U||\mathrm{d}\varphi|\left( \approx \arg \min_\varphi \Sigma_i |\nabla U_i||\Delta \varphi_i|\right),
 (\#eq:optim)
-\end{equation} 
+\end{equation}
 where $A$ and $B$ are the starting and end points and $\varphi$ is the path starting at $A$ and ending in $B$. After that, the point with the maximum potential value on the MEP is identified as the saddle point. Note that while the barrier height still indicates the stability of local minima, the MEP may not be the true most probable path for a nongradient system to transition between stable states.
 
 # Examples
@@ -171,17 +171,17 @@ We use two dynamical systems to illustrate the usage of the \CRANpkg{simlandr} p
 
 ## Example 1: the gene expression model
 
-This model is built on the mutual regulations of the expressions of two genes, in which $X_1$ and $X_2$ represent the expression levels of two genes which activate themselves and inhibit each other. A graphical illustration is shown in Figure \@ref(fig:e1) (adapted from @wangQuantifyingWaddingtonLandscape2011). Their dynamic functions can be written as 
+This model is built on the mutual regulations of the expressions of two genes, in which $X_1$ and $X_2$ represent the expression levels of two genes which activate themselves and inhibit each other. A graphical illustration is shown in Figure \@ref(fig:e1) (adapted from @wangQuantifyingWaddingtonLandscape2011). Their dynamic functions can be written as
 \begin{align}
-\frac {\mathrm{d}X_ {1}}{\mathrm{d}t}  &=  \frac {ax_ {1}^ {n}}{S^ {n}+x_ {1}^ {n}} + \frac {bS^ {n}}{S^ {n}+x_ {2}^ {n}} - kx_ {1}+ \sigma_1 \frac{\mathrm{d}W_1}{\mathrm{d}t}, 
+\frac {\mathrm{d}X_ {1}}{\mathrm{d}t}  &=  \frac {ax_ {1}^ {n}}{S^ {n}+x_ {1}^ {n}} + \frac {bS^ {n}}{S^ {n}+x_ {2}^ {n}} - kx_ {1}+ \sigma_1 \frac{\mathrm{d}W_1}{\mathrm{d}t},
 (\#eq:sim2x1)
 \\
-\frac {\mathrm{d}X_ {2}}{\mathrm{d}t}  &=  \frac {ax_ {2}^ {n}}{S^ {n}+x_ {2}^ {n}} + \frac {bS^ {n}}{S^ {n}+x_ {1}^ {n}} - kx_ {2}+ \sigma_2 \frac{\mathrm{d}W_2}{\mathrm{d}t}, 
+\frac {\mathrm{d}X_ {2}}{\mathrm{d}t}  &=  \frac {ax_ {2}^ {n}}{S^ {n}+x_ {2}^ {n}} + \frac {bS^ {n}}{S^ {n}+x_ {1}^ {n}} - kx_ {2}+ \sigma_2 \frac{\mathrm{d}W_2}{\mathrm{d}t},
 (\#eq:sim2x2)
 \\
-\frac {\mathrm{d}a}{\mathrm{d}t} &= -\lambda a+ \sigma_3 \frac{\mathrm{d}W_3}{\mathrm{d}t}, 
+\frac {\mathrm{d}a}{\mathrm{d}t} &= -\lambda a+ \sigma_3 \frac{\mathrm{d}W_3}{\mathrm{d}t},
 (\#eq:sim2a)
-\end{align} 
+\end{align}
 where $a$ represents the strength of self-activation, $b$ represents the strength of mutual-inhibition, and $k$ represents the speed of degradation. The development of an organism is modeled as $a$ decreasing at a certain speed $\lambda$. In the beginning, there is only one possible state for the cell. After a certain milestone, the cell differentiates into one of the two possible states.
 
 ```{r e1, fig.show="hold", out.width="50%", fig.cap="A graphical illustration of the relationship between the activation levels of the two genes. Solid arrows represent positive relationships (i.e., activation) and dashed arrows represent negative relationships (i.e., inhibition).", fig.alt='Two large circles labeled X1 and X2. Dashed arrows labeled b connect the circles in both directions. Each circle has a solid self-loop labeled a and a dashed self-loop labeled k.', echo=FALSE,message=FALSE}
@@ -254,14 +254,14 @@ plot(single_output_gene_mcmc_thin)
 We generated the 3D landscape for this model with `make_3d_single()`. Here, we use `x`, `y` to specify the variables of interest, and use `lims` to specify the limits of the x and y axes for the landscape. The `lims` argument can be left blank, then the limits will be automatically calculated.
 
 ```{r warning=FALSE}
-l_single_gene_3d <- 
-  make_3d_single(single_output_gene2, 
-                 x = "delta_x", y = "a", 
-                 lims = c(-1.5, 1.5, 0, 1.5), 
+l_single_gene_3d <-
+  make_3d_single(single_output_gene2,
+                 x = "delta_x", y = "a",
+                 lims = c(-1.5, 1.5, 0, 1.5),
                  Umax = 8)
 ```
 
-The resulting landscape is shown in the left panel of Figure \@ref(fig:3dstaticgene). In this plot, the x-axis represents $\Delta x (= x_1-x_2)$, and the y-axis represents $a$. To compare with, the potential landscape obtained analytically by @wangQuantifyingWaddingtonLandscape2011 is shown in the right panel Figure \@ref(fig:3dstaticgene). The result of \CRANpkg{simlandr} appears to be very close to the result based on the analytical derivation. Note that because different normalization methods were used, the $U$ values of the two landscapes are not directly comparable. Here, we are mainly interested in their relative shape.
+The resulting landscape is shown in the left panel of Figure \@ref(fig:3dstaticgene). In this plot, the x-axis represents $\Delta x (= x_1-x_2)$, and the y-axis represents $a$. To compare with, the potential landscape obtained analytically by @wangQuantifyingWaddingtonLandscape2011 is shown in the right panel of Figure \@ref(fig:3dstaticgene). The result of \CRANpkg{simlandr} appears to be very close to the result based on the analytical derivation. Note that because different normalization methods were used, the $U$ values of the two landscapes are not directly comparable. Here, we are mainly interested in their relative shape.
 
 ```{r eval=FALSE}
 plot(l_single_non_grad_3d)
@@ -306,7 +306,7 @@ The local minima, the saddle point, and the MEP can be added to the landscape wi
 plot(l_single_gene_3d, 2) + autolayer(b_single_gene_3d)
 ```
 
-Next, we use multiple simulations to investigate the influence of two parameters, $k$ and $b$, on the stability of the system. As explained above, the parameter $b$ represents the strength of mutual-inhibition between the two genes. Therefore, as $b$ increases, we expect the differentiation is more extreme, that is, the cell is more likely to develop into one of the two cell types with very different gene expression levels. The valleys in the landscape representing the two types will become further apart and the barrier becomes clearer. The parameter $k$ represents the speed of degradation of the gene products. As $k$ increases, the gene products degrade faster, and this effect is more pronounced when the gene products are at high levels. Therefore, the dominant gene will express at a less extreme level, and we expect that the two valleys become closer, and the barrier will become less clear as $k$ increases. 
+Next, we use multiple simulations to investigate the influence of two parameters, $k$ and $b$, on the stability of the system. As explained above, the parameter $b$ represents the strength of mutual-inhibition between the two genes. Therefore, as $b$ increases, we expect the differentiation is more extreme, that is, the cell is more likely to develop into one of the two cell types with very different gene expression levels. The valleys in the landscape representing the two types will become further apart and the barrier becomes clearer. The parameter $k$ represents the speed of degradation of the gene products. As $k$ increases, the gene products degrade faster, and this effect is more pronounced when the gene products are at high levels. Therefore, the dominant gene will express at a less extreme level, and we expect that the two valleys become closer, and the barrier will become less clear as $k$ increases.
 
 We use the batch simulation functions of \CRANpkg{simlandr}. First, we create the argument set for the batch simulation. This specifies the parameters to be varied. We examined three $b$ values, 0.5, 1, 1.5, and three $k$ values, 0.5, 1, 1.5, which form 9 possible combinations.
 
@@ -446,7 +446,7 @@ library(PanicModel)
 sim_fun_panic <- function(x0, par) {
 
   # Change several default parameters
-  pars <- pars_default 
+  pars <- pars_default
   # Increase the noise strength to improve sampling efficiency
   pars$N$lambda_N <- 200
   # Make S constant through the simulation
@@ -461,7 +461,7 @@ sim_fun_panic <- function(x0, par) {
   # Specify the value of S according to the format requirement by `batch_simulation()`.
   initial$S <- par$S
 
-  # Extract the simulation output from the result by simPanic(). Only keep the core variables. 
+  # Extract the simulation output from the result by simPanic(). Only keep the core variables.
   return(
     as.matrix(
       simPanic(1:5000, initial = initial, parameters = pars)$outmat[, c("A", "PT", "E")]
@@ -509,12 +509,12 @@ We then create the 3D landscape for the panic disorder model, shown in Figure \@
 
 ```{r 3dstaticpanic, fig.show="hold", out.width="50%", fig.cap="The 3D landscape (potential value as color) for the panic disorder model", fig.alt='A landscape plot with two basins.', echo=FALSE,message=FALSE,warning=FALSE}
 l_single_panic_3d <- make_3d_single(
-  single_output_panic |> window(start = 100), 
+  single_output_panic |> window(start = 100),
   x = "A", y = "PT", h = 0.005, lims = c(-1, 1.5, -0.5, 1.5))
 plot(l_single_panic_3d, 2)
 ```
 
-We now investigate the effect of the parameter $S$ on the potential landscape. This parameter represents the tendency that a person considers physical arousal as a sign of danger. Therefore, we expect that higher $S$ will stabilize the panic state and destabilize the healthy state. 
+We now investigate the effect of the parameter $S$ on the potential landscape. This parameter represents the tendency that a person considers physical arousal as a sign of danger. Therefore, we expect that higher $S$ will stabilize the panic state and destabilize the healthy state.
 
 We perform a batch simulation with varying $S$ values to construct the potential landscapes for different $S$ values. This, again, starts with the creation of a grid of parameter values.
 
